<resources>
    <string name="app_name">MARS</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="proceed_with_your">Proceed with your</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="lblPresent">Present</string>
    <string name="lblSpecialLeave">Special Leave</string>
    <string name="lblLeave">Leave</string>
    <string name="lblMarkAttendance">Mark Attendance</string>
    <string name="lblRefreshLocation">Refresh Location</string>
    <string name="lblLogout">Logout</string>
    <string name="lblViewAttendance">View Attendance</string>
    <string name="lblContact">Contact</string>
    <string name="lblFAQ">FAQ\'s</string>
    <string name="lblUserGuide">User Guide</string>

    <string name="lblOk">OK</string>
    <string name="lblCancel">Cancel</string>
    <string name="username_field_empty_error">Please enter username</string>
    <string name="password_field_empty_error">Please enter password</string>
    <string name="mark_attendance_selection_error">Please select attendance option</string>
    <string name="place_fetch_error">Please refresh location</string>

    <string name="loading">Loading</string>
    <string name="internet_error">Please check your internet connection.</string>
    <string name="api_timeout_error">Something went wrong.</string>
    <string name="sure_to_logout">Are you sure you want to log out?</string>

    <string name="SNo">S.No.</string>
    <string name="name_of_CLTC">Name of CLTC Member</string>
    <string name="name_of_ULBs">Name of ULBs</string>
    <string name="designation">Designation</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="attendance">Attendance</string>
    <string name="comment_header">Attendance approved by ULBs With Remarks</string>

</resources>
