<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:paddingStart="@dimen/dp_20"
    android:paddingEnd="@dimen/dp_20"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_with_your"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_30"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_5"/>

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/dp_60"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/dp_20"
        android:inputType="textPassword"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_blue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/login"
        android:layout_marginTop="@dimen/dp_40"/>

</LinearLayout>