<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.MarkAttendanceFragment">

    <include android:id="@+id/logoutLayout"
        layout="@layout/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logoutLayout"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <include layout="@layout/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup android:id="@+id/attendanceRadioGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_30">

            <RadioButton android:id="@+id/presentOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPresent"
                android:textColor="@color/black"/>

            <RadioButton android:id="@+id/specialOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSpecialLeave"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dp_10"/>

            <RadioButton android:id="@+id/leaveOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblLeave"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dp_10"/>

        </RadioGroup>

        <Button android:id="@+id/btnMarkAttendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_blue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/lblMarkAttendance"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_40"/>

        <TextView android:id="@+id/lblUserAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/address_block_background"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="Building No 303, Near Nirman Vihar Metro \n New Delhi - 110092"/>

        <LinearLayout android:id="@+id/btnRefreshLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:src="@drawable/refresh"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lblRefreshLocation"
                android:layout_marginStart="@dimen/dp_5"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>